[project]
name = "timemodel-benchmark"
version = "0.1.0"
description = "Benchmark for TimesFM, Chronos, and MOMENT time series models"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "timesfm>=1.0.0",
    "chronos-forecasting>=1.0.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
]

[tool.uv.workspace]
members = []
